--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -22,7 +22,7 @@
 </div>
 </body>
 </html>
-<script src="../utils.js"></script>
+<script src="utils.js"></script>
 <script src="js/index.js"></script>
 <script>
     /*
